generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum AppointmentStatus {
  HELD
  CONFIRMED
  CANCELLED
  RESCHEDULED
  NO_SHOW
}

enum CallSessionStatus {
  IN_PROGRESS
  DROPPED
  COMPLETED
  ESCALATED
  ABANDONED
}

enum CallDirection {
  INBOUND
  OUTBOUND
}

enum CallbackStatus {
  SCHEDULED
  MISSED
  RESOLVED
  CANCELLED
}

enum PmsWritebackStatus {
  PENDING
  SUCCEEDED
  FAILED
}

enum FollowupReason {
  HUMAN_REQUEST
  CLINICAL_CONCERN
  PMS_FAILURE
  DROPPED_CALL
  MISSED_CALLBACK
  OTHER
}

model Clinic {
  id        String   @id @default(cuid())
  name      String
  website   String?
  timezone  String   @default("Asia/Kolkata")
  metadata  Json?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  branches Branch[]
  doctors  Doctor[]
}

model Branch {
  id        String   @id @default(cuid())
  clinicId  String
  name      String
  city      String
  country   String
  phone     String?
  timezone  String   @default("Asia/Kolkata")
  address   String?
  metadata  Json?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  clinic              Clinic               @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  doctors             Doctor[]
  availabilityWindows AvailabilityWindow[]
  appointments        Appointment[]

  @@index([clinicId])
  @@index([city])
}

model Doctor {
  id           String   @id @default(cuid())
  clinicId     String
  branchId     String
  fullName     String
  spokenName   String
  specialty    String
  department   String
  languages    String[]
  sourceUrl    String?
  isActive     Boolean  @default(true)
  metadata     Json?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  clinic              Clinic               @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  branch              Branch               @relation(fields: [branchId], references: [id], onDelete: Cascade)
  availabilityWindows AvailabilityWindow[]
  appointments        Appointment[]

  @@index([clinicId, specialty])
  @@index([branchId, specialty])
}

model Patient {
  id                 String   @id @default(cuid())
  fullName           String
  normalizedName     String
  phoneE164          String
  languagePreference String?
  dateOfBirth        DateTime?
  metadata           Json?
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  appointments      Appointment[]
  callSessions      CallSession[]
  callbacks         OutboundCallback[]
  pendingFollowups  PendingFollowup[]

  @@index([phoneE164])
  @@index([normalizedName])
}

model AvailabilityWindow {
  id                  String   @id @default(cuid())
  doctorId            String
  branchId            String
  dayOfWeek           Int
  startMinute         Int
  endMinute           Int
  slotDurationMinutes Int      @default(30)
  bufferMinutes       Int      @default(10)
  effectiveFrom       DateTime?
  effectiveTo         DateTime?
  isActive            Boolean  @default(true)
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  doctor Doctor @relation(fields: [doctorId], references: [id], onDelete: Cascade)
  branch Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  @@index([doctorId, dayOfWeek])
  @@index([branchId, dayOfWeek])
}

model Appointment {
  id                     String            @id @default(cuid())
  patientId              String
  doctorId               String
  branchId               String
  callSessionId          String?
  sourceAppointmentId    String?
  startAt                DateTime
  endAt                  DateTime
  status                 AppointmentStatus @default(CONFIRMED)
  reason                 String?
  language               String?
  idempotencyKey         String            @unique
  externalPmsId          String?
  pmsStatus              PmsWritebackStatus @default(PENDING)
  cancellationFeeMentioned Boolean          @default(false)
  metadata               Json?
  createdAt              DateTime          @default(now())
  updatedAt              DateTime          @updatedAt

  patient     Patient      @relation(fields: [patientId], references: [id])
  doctor      Doctor       @relation(fields: [doctorId], references: [id])
  branch      Branch       @relation(fields: [branchId], references: [id])
  callSession CallSession? @relation(fields: [callSessionId], references: [id])
  source      Appointment? @relation("AppointmentReschedule", fields: [sourceAppointmentId], references: [id])
  reschedules Appointment[] @relation("AppointmentReschedule")
  pmsWritebacks PmsWriteback[]

  @@index([patientId, startAt])
  @@index([doctorId, startAt])
  @@index([branchId, startAt])
  @@index([status])
}

model CallSession {
  id                String            @id @default(cuid())
  retellCallId      String?           @unique
  phoneE164         String
  patientId         String?
  direction         CallDirection      @default(INBOUND)
  status            CallSessionStatus  @default(IN_PROGRESS)
  language          String?
  intent            String?
  currentStep       String?
  lastCompletedStep String?
  state             Json?
  droppedAt         DateTime?
  completedAt       DateTime?
  callbackId        String?
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt

  patient        Patient?              @relation(fields: [patientId], references: [id])
  callback       OutboundCallback?     @relation(fields: [callbackId], references: [id])
  appointments   Appointment[]
  messages       ConversationMessage[]
  pendingFollowups PendingFollowup[]

  @@index([phoneE164, status])
  @@index([updatedAt])
}

model ConversationMessage {
  id            String   @id @default(cuid())
  callSessionId String
  role          String
  language      String?
  transcript    String?
  toolName      String?
  payload       Json?
  latencyMs     Int?
  createdAt     DateTime @default(now())

  callSession CallSession @relation(fields: [callSessionId], references: [id], onDelete: Cascade)

  @@index([callSessionId, createdAt])
}

model OutboundCallback {
  id                    String         @id @default(cuid())
  phoneE164             String
  patientId             String?
  originalCallSessionId String?
  status                CallbackStatus @default(SCHEDULED)
  reason                String?
  context               Json?
  scheduledAt           DateTime?
  missedAt              DateTime?
  resolvedAt            DateTime?
  createdAt             DateTime       @default(now())
  updatedAt             DateTime       @updatedAt

  patient      Patient?      @relation(fields: [patientId], references: [id])
  callSessions CallSession[]

  @@index([phoneE164, status])
}

model PendingFollowup {
  id            String         @id @default(cuid())
  patientId     String?
  callSessionId String?
  reason        FollowupReason
  summary       String
  status        String         @default("OPEN")
  metadata      Json?
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt

  patient     Patient?     @relation(fields: [patientId], references: [id])
  callSession CallSession? @relation(fields: [callSessionId], references: [id])

  @@index([status, reason])
}

model PmsWriteback {
  id             String             @id @default(cuid())
  appointmentId  String
  idempotencyKey String             @unique
  status         PmsWritebackStatus @default(PENDING)
  attempts       Int                @default(0)
  payload        Json
  response       Json?
  lastError      String?
  nextRetryAt    DateTime?
  createdAt      DateTime           @default(now())
  updatedAt      DateTime           @updatedAt

  appointment Appointment @relation(fields: [appointmentId], references: [id], onDelete: Cascade)

  @@index([status, nextRetryAt])
}

model IdempotencyRecord {
  id          String   @id @default(cuid())
  key         String   @unique
  scope       String
  requestHash String
  response    Json?
  expiresAt   DateTime
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([scope, key])
  @@index([expiresAt])
}

model AuditLog {
  id         String   @id @default(cuid())
  actorType  String
  actorId    String?
  entityType String
  entityId   String
  action     String
  before     Json?
  after      Json?
  requestId  String?
  createdAt  DateTime @default(now())

  @@index([entityType, entityId])
  @@index([createdAt])
}
